crates/gossamer-diagnostics/tests/snapshots/GT0116.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0116]: A shift by a literal amount outside `0..BITS` of the shifted type, such - here
--- framed ---
error[GT0116]: A shift by a literal amount outside `0..BITS` of the shifted type, such
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
