crates/gossamer-diagnostics/tests/snapshots/GT0117.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0117]: A method call on a generic parameter names a method two of its traits - here
--- framed ---
error[GT0117]: A method call on a generic parameter names a method two of its traits
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
