crates/gossamer-diagnostics/tests/snapshots/GT0120.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0120]: A websocket connection is a `websocket::Conn`, a handle that closes - here
--- framed ---
error[GT0120]: A websocket connection is a `websocket::Conn`, a handle that closes
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
